--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<h2>Roll No.:323103310062</h2>
 	<h2>Branch:CSE-1</h2>
 	<img src="lakshman.jpg" width=40% height =70%>
-
+	<img src="salaar.jpeg" width=40% height =70%>
         
 
          
