--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <head>
   
  </head>
-	<body>
+	<body></body>
 	<h1>ABOUT MYSELF:</h1>
 	<h1>D lakshman</h1>
 	<h2>Roll No.:323103310062</h2>
@@ -28,8 +28,8 @@ Collaboration tools like Git facilitate teamwork, while deployment platforms lik
         
         
 	<h1> How to start web Development </h1>
-        <h3>Videos to refer</h3>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/MkcfB7S4fq0?si=I_u5Ge7licFzhjBm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <h3>Email Creation and Usage and Digital profile in linkedin</h3>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/J2EY3jqHxrM?si=DKkivpl_N8eO_6z7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <p><a href="https://dl.flipkart.com/s/KtXnW3uuuN">book to refer</a></p>
         <img src="https://rukminim2.flixcart.com/image/850/1000/book/2/7/1/fundamentals-of-web-development-1-e-original-imaehdzwfhrjeyjs.jpeg?q=20" width:35% height:50%>
 
