--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         
 
          
-         <h1>Web Development</h1>
+         <h1>Web Developments</h1>
 <img src="webdevelopment.jpg" class="imgss" style="width:500px;height:auto;">
 faces and interactivity. On the backend, Node.js, Django, and Flask are popular choices.
 
